# tsgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_0.1.0.md  environment.yml  pyproject.toml  requirements.txt
changes/: unreleased.md
configs/: example_pipeline_minimal.yaml  example_pipeline_with_split.yaml  mamba_default.yaml
experiments/: .gitkeep
notebooks/: README.md  colab_train.ipynb
scripts/: aggregate_results.py  generate_standard_configs.py  smoke_test_experiments.py
src/tsgen/: __init__.py  evaluate.py  train.py
src/tsgen/analysis/: __init__.py  distribution_tests.py  metrics.py  tstr.py
src/tsgen/cli/: __init__.py  experiments.py  main.py
src/tsgen/config/: __init__.py  schema.py
src/tsgen/data/: __init__.py  pipeline.py  pipeline_builder.py  pipeline_registry.py  processor.py
src/tsgen/evaluation/: __init__.py  evaluators.py  pipeline.py
src/tsgen/experiments/: __init__.py  backtest.py  manager.py
src/tsgen/models/: __init__.py  base_model.py  baselines.py  diffusion.py  diffwave.py  dit.py  embeddings.py  factory.py  garch.py  losses.py  mamba.py  registry.py  timevae.py  transformer.py  unet.py
src/tsgen/tracking/: __init__.py  base.py  factory.py  mlflow_tracker.py
src/tsgen/training/: __init__.py  base.py  baseline_trainer.py  checkpoint_utils.py  diffusion_trainer.py  losses.py  registry.py  vae_trainer.py
src/tsgen/utils/: __init__.py
tests/: conftest.py  test_base_model.py  test_baselines.py  test_causal_scaling.py  test_checkpoint_resumption.py  test_checkpoints.py  test_cli.py  test_cli_override.py  test_config_schema.py  test_correlation_metrics.py  test_data_factory.py  test_diffusion.py  test_diffwave.py  test_distribution_tests.py  test_dit.py  test_eval_robustness.py  test_evaluate_with_pipeline.py  test_experiment_manager.py  test_experiments_cli.py  test_factory.py  test_garch.py  test_integration.py  test_integration_artifacts.py  test_mamba.py  test_mamba_parallel_scan.py  test_metrics.py  test_model_registry.py  test_models.py  test_multivariate.py  test_no_scaling.py  test_pipeline_builder.py  test_timevae.py  test_tracking.py  test_train_with_pipeline.py  test_training_registry.py  test_transformer.py  test_tstr.py  test_vae_trainer.py
